--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.2.3",
+    "material-icons": "^1.13.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -33,7 +34,7 @@
     "@angular-eslint/eslint-plugin-template": "15.2.0",
     "@angular-eslint/schematics": "15.2.0",
     "@angular-eslint/template-parser": "15.2.0",
-    "@angular/cli": "~15.0.4",
+    "@angular/cli": "~15.1.3",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.48.1",
